; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mednafen/mednafen-1.21/src/desa68/extr_desa68.c_desa_move.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mednafen/mednafen-1.21/src/desa68/extr_desa68.c_desa_move.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i64 }

@d = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@MODE_AN = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @desa_move to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @desa_move() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @d, i32 0, i32 0), align 8
  store i32 %3, i32* %1, align 4
  %4 = load i32, i32* %1, align 4
  %5 = and i32 %4, 12288
  %6 = ashr i32 %5, 9
  %7 = ashr i32 1464615487, %6
  store i32 %7, i32* %2, align 4
  %8 = call i32 @desa_ascii(i8 signext 69)
  %9 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @d, i32 0, i32 1), align 8
  %10 = load i64, i64* @MODE_AN, align 8
  %11 = icmp eq i64 %9, %10
  %12 = zext i1 %11 to i64
  %13 = select i1 %11, i32 1090519040, i32 0
  %14 = add nsw i32 %13, 3014656
  %15 = add nsw i32 %14, 32
  %16 = load i32, i32* %2, align 4
  %17 = shl i32 %16, 8
  %18 = add nsw i32 %15, %17
  %19 = trunc i32 %18 to i8
  %20 = call i32 @desa_ascii(i8 signext %19)
  %21 = load i32, i32* %1, align 4
  %22 = load i32, i32* %2, align 4
  %23 = call i32 @get_ea_move(i32 0, i32 %21, i32 %22)
  %24 = call i32 @desa_char(i8 signext 44)
  %25 = load i32, i32* %1, align 4
  %26 = load i32, i32* %2, align 4
  %27 = call i32 @get_ea_move(i32 6, i32 %25, i32 %26)
  ret void
}

declare dso_local i32 @desa_ascii(i8 signext) #1

declare dso_local i32 @get_ea_move(i32, i32, i32) #1

declare dso_local i32 @desa_char(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
